2001-11-05  Bruno Haible  <haible@clisp.cons.org>

	* format-lisp.c (parse_upto): Remove 'base' argument. It is always 0.
	(format_parse): Update.

	* msgl-equal.c: Include string.h.
	* str-list.c: Likewise.

2001-11-03  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (line_comment): Remove variable, so default value is
	always 1.

2001-11-03  Bruno Haible  <haible@clisp.cons.org>

	* x-c.c (extract_parenthesized): New function, extracted from
	extract_c.
	(extract_c): Call extract_parenthesized.

2001-11-03  Bruno Haible  <haible@clisp.cons.org>

	Add YCP plural form support.
	* x-ycp.c (enum token_type_ty): New value token_type_comma.
	(x_ycp_lex): Recognize comma.
	(extract_ycp): Also recognize the _("singular","plural" pattern.

2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (check_plural_eval): Fix #if mistake.

2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* msgl-iconv.h (iconv_message_list): Add argument 'canon_from_code'.
	* msgl-iconv.c (iconv_message_list): Add argument 'canon_from_code'.
	(iconv_msgdomain_list): Update.
	* write-java.c (msgdomain_write_java): Update.
	* msgl-cat.c (catenate_msgdomain_list): Pass the canon_charsets[n][k]
	to iconv_message_list; the header entry that contained the charset
	specification may already have been removed from the message list.

2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* msgl-equal.h (string_list_equal): New declaration.
	* msgl-equal.c (string_list_equal): Export function.
	* message.h (struct altstr): New fields 'comment', 'comment_dot'.
	* msgl-cat.c: Include msgl-equal.h.
	(catenate_msgdomain_list): If all alternative comments are equal,
	use one copy of them, instead of concatenating them. Likewise for dot
	comments.
	* Makefile.am (libgettextsrc_la_SOURCES): Add msgl-equal.c.
	(msgmerge_SOURCES): Remove msgl-equal.c.

2001-10-31  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (noinst_HEADERS): Add read-java.h, write-java.h,
	format.h, msgunfmt.h.